tests/error/hashes2.c
// fail "'##' at the end of a macro replacement list is illegal."
#define b q ##
